--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-webpack-plugin": "4.0.1",
     "nuxt": "3.9.0",
     "prettier": "3.1.1",
+    "sass": "^1.70.0",
     "typescript": "5.3.3",
     "vue": "3.3.6",
     "vue-eslint-parser": "9.3.2",
